# epics-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  review-round1-ad-core-plugins.md  review-round2-ad-core-plugins.md
crates/ad-core-rs/: Cargo.toml  README.md  THIRD_PARTY_LICENSES
crates/ad-core-rs/db/: NDArrayBase.template  NDAttributeN_settings.req  NDFFT_settings.req  NDFileHDF5_settings.req  NDROIStatN_settings.req  NDStats_settings.req  commonPlugins_settings.req
crates/ad-core-rs/ioc/: commonPlugins.cmd
crates/ad-core-rs/src/: attributes.rs  codec.rs  color.rs  color_layout.rs  error.rs  lib.rs  ndarray.rs  ndarray_handle.rs  ndarray_pool.rs  pixel_cast.rs  roi.rs  runtime.rs  timestamp.rs
crates/ad-core-rs/tests/: ndarray_tests.rs
crates/ad-plugins/: Cargo.toml  README.md
crates/ad-plugins-rs/: Cargo.toml  README.md
crates/ad-plugins-rs/src/: attr_plot.rs  attribute.rs  bad_pixel.rs  circular_buff.rs  codec.rs  color_convert.rs  fft.rs  file_hdf5.rs  file_jpeg.rs  file_magick.rs  file_netcdf.rs  file_nexus.rs  file_tiff.rs  gather.rs  ioc.rs  lib.rs  overlay.rs  par_util.rs  passthrough.rs  pos_plugin.rs  process.rs  pva.rs  roi.rs  roi_stat.rs  scatter.rs  stats.rs  std_arrays.rs  time_series.rs  transform.rs
crates/ad-plugins-rs/tests/: integration.rs
crates/ad-plugins/src/: attr_plot.rs  attribute.rs  bad_pixel.rs  circular_buff.rs  codec.rs  color_convert.rs  fft.rs  file_hdf5.rs  file_jpeg.rs  file_netcdf.rs  file_tiff.rs  gather.rs  lib.rs  overlay.rs  passthrough.rs  pos_plugin.rs  process.rs  roi.rs  roi_stat.rs  scatter.rs  stats.rs  std_arrays.rs  time_series.rs  transform.rs
crates/ad-plugins/tests/: integration.rs
crates/asyn-rs/: Cargo.toml  README.md  THIRD_PARTY_LICENSES
crates/asyn-rs/benches/: throughput.rs
crates/asyn-rs/src/: adapter.rs  error.rs  exception.rs  interrupt.rs  lib.rs  manager.rs  param.rs  port.rs  port_actor.rs  port_handle.rs  request.rs  sync_io.rs  trace.rs  user.rs
crates/asyn-rs/tests/: port_driver_tests.rs
crates/autosave/: Cargo.toml
crates/autosave-rs/: Cargo.toml  README.md  THIRD_PARTY_LICENSES
crates/autosave-rs/tests/: backup.rs  manager.rs  request_parsing.rs  save_restore.rs  verify.rs
crates/autosave/src/: lib.rs
crates/busy-rs/: Cargo.toml  README.md  THIRD_PARTY_LICENSES
crates/busy-rs/tests/: busy_test.rs
crates/calc/: Cargo.toml
crates/calc/src/: lib.rs
crates/calc/tests/: array_advanced_tests.rs  array_core_tests.rs  string_advanced_tests.rs  string_core_tests.rs
crates/epics-base/: Cargo.toml
crates/epics-base-rs/: .gitignore  Cargo.toml  README.md
crates/epics-base-rs/benches/: record_bench.rs
crates/epics-base-rs/src/: error.rs  lib.rs  types.rs
crates/epics-base-rs/tests/: autosave_backup.rs  autosave_manager.rs  autosave_request_parsing.rs  autosave_save_restore.rs  autosave_verify.rs  busy_test.rs  c_epics_parity.rs  c_epics_parity_wire.rs  calc_array_advanced_tests.rs  calc_array_core_tests.rs  calc_compile_tests.rs  calc_error_tests.rs  calc_eval_tests.rs  calc_string_advanced_tests.rs  calc_string_core_tests.rs  client_server.rs  database_tests.rs  record_tests.rs  types_tests.rs
crates/epics-base/src/: lib.rs
crates/epics-base/tests/: c_epics_parity.rs  client_server.rs
crates/epics-bridge-rs/: Cargo.toml  README.md
crates/epics-bridge-rs/example/: dual-gateway.toml  gateway.access  gateway.command  gateway.pvlist  preload.txt
crates/epics-bridge-rs/src/: channel.rs  error.rs  group.rs  group_config.rs  lib.rs  provider.rs  pvif.rs
crates/epics-bridge-rs/tests/: pva_gateway.rs  qsrv_pva_e2e.rs  testqgroup.rs  testqsingle.rs
crates/epics-ca-rs/: BENCHMARKS.md  Cargo.toml  README.md  SAFETY.md  TESTING.md
crates/epics-ca-rs/benches/: end_to_end_bench.rs  protocol_bench.rs
crates/epics-ca-rs/doc/: 01-overview.md  02-wire-protocol.md  03-client.md  04-server.md  05-state-machines.md  06-dbr-types.md  07-flow-control.md  08-environment.md  09-libca-parity.md  10-observability.md  11-tls-design.md  12-discovery.md  README.md
crates/epics-ca-rs/examples/: custom_discovery_backend.rs
crates/epics-ca-rs/fuzz/: Cargo.toml  README.md
crates/epics-ca-rs/src/: audit.rs  cap_token.rs  channel.rs  chaos.rs  cli.rs  lib.rs  observability.rs  protocol.rs  repeater.rs  replay.rs  tls.rs
crates/epics-ca-rs/tests/: acf_hot_reload.rs  differential_libca.rs  discovery_mdns.rs  interop_c_client_rust_ioc.rs  interop_rust_client_c_ioc.rs  property_tests.rs  protocol_tests.rs  stress_load.rs  tls_end_to_end.rs  tls_helpers.rs  wire_golden.rs
crates/epics-calc-rs/: Cargo.toml  README.md  THIRD_PARTY_LICENSES
crates/epics-calc-rs/db/: calcout_settings.req  sseqRecord_settings.req  swait_settings.req  transforms10_settings.req  userArrayCalcs10more_settings.req  userCalcN_noDisable_settings.req  userCalcN_settings.req  userCalcOuts10more_settings.req  userStringCalcs10more_settings.req  userStringSeqs10more_settings.req  userTransforms10more_settings.req  userTransforms20_settings.req
crates/epics-calc-rs/tests/: array_advanced_tests.rs  compile_tests.rs  error_tests.rs  eval_tests.rs  string_advanced_tests.rs  string_core_tests.rs
crates/epics-macros-rs/: Cargo.toml  README.md
crates/epics-macros-rs/src/: lib.rs
crates/epics-macros-rs/tests/: derive_tests.rs
crates/epics-pva-rs/: Cargo.toml  README.md
crates/epics-pva-rs/doc/: 01-overview.md  02-wire-protocol.md  03-pvdata-types.md  04-client.md  05-server.md  (+8 more)
crates/epics-rs/: Cargo.toml  README.md
crates/epics-seq-rs/: Cargo.toml  README.md
crates/epics-tools-rs/: Cargo.toml  README.md
crates/motor-rs/: Cargo.toml  README.md  THIRD_PARTY_LICENSES
crates/mqtt-rs/: Cargo.toml  README.md
crates/optics-rs/: Cargo.toml
crates/scaler-rs/: Cargo.toml  LICENSE  README.md
crates/snc/: Cargo.toml  README.md
crates/std-rs/: Cargo.toml  README.md
examples/mini-beamline/: Cargo.toml  README.md
examples/mqtt-ioc/: Cargo.toml  README.md
examples/ophyd-test-ioc/: Cargo.toml  README.md
examples/qsrv-ioc/: Cargo.toml  README.md
examples/random-signals/: Cargo.toml  README.md
(+1833 files in other folders)
