[workspace]
members = ["crates/*", "examples/*"]
default-members = [
    "crates/ad-core-rs",
    "crates/ad-plugins-rs",
    "crates/asyn-rs",
    "crates/epics-base-rs",
    "crates/epics-ca-rs",
    "crates/epics-macros-rs",
    "crates/epics-pva-rs",
    "crates/epics-bridge-rs",
    "crates/epics-rs",
    "crates/motor-rs",
    "crates/std-rs",
    "crates/scaler-rs",
    "crates/optics-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.8.1"
authors = ["Sang Woo Kim <sngwkim915@gmail.com>"]
license = "EPICS"
repository = "https://github.com/epics-rs/epics-rs"

[workspace.dependencies]
ad-core-rs = { path = "crates/ad-core-rs", version = "0.8.1" }
ad-plugins-rs = { path = "crates/ad-plugins-rs", version = "0.8.1" }
asyn-rs = { path = "crates/asyn-rs", version = "0.8.1" }
epics-base-rs = { path = "crates/epics-base-rs", version = "0.8.1" }
epics-ca-rs = { path = "crates/epics-ca-rs", version = "0.8.1" }
epics-macros-rs = { path = "crates/epics-macros-rs", version = "0.8.1" }
epics-pva-rs = { path = "crates/epics-pva-rs", version = "0.8.1" }
epics-bridge-rs = { path = "crates/epics-bridge-rs", version = "0.8.1" }
motor-rs = { path = "crates/motor-rs", version = "0.8.1" }
std-rs = { path = "crates/std-rs", version = "0.8.1" }
scaler-rs = { path = "crates/scaler-rs", version = "0.8.1" }
optics-rs = { path = "crates/optics-rs", version = "0.8.1" }
