[workspace]
members = ["crates/*", "examples/*"]
default-members = [
    "crates/ad-core-rs",
    "crates/ad-plugins-rs",
    "crates/asyn-rs",
    "crates/epics-base-rs",
    "crates/epics-ca-rs",
    "crates/epics-macros-rs",
    "crates/epics-pva-rs",
    "crates/epics-rs",
    "crates/motor-rs",
    "crates/std-rs",
    "crates/scaler-rs",
    "crates/optics-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.7.12"
authors = ["Sang Woo Kim <sngwkim915@gmail.com>"]
license = "EPICS Open License"
repository = "https://github.com/epics-rs/epics-rs"

[workspace.dependencies]
ad-core-rs = { path = "crates/ad-core-rs", version = "0.7.12" }
ad-plugins-rs = { path = "crates/ad-plugins-rs", version = "0.7.12" }
asyn-rs = { path = "crates/asyn-rs", version = "0.7.12" }
epics-base-rs = { path = "crates/epics-base-rs", version = "0.7.12" }
epics-ca-rs = { path = "crates/epics-ca-rs", version = "0.7.12" }
epics-macros-rs = { path = "crates/epics-macros-rs", version = "0.7.12" }
epics-pva-rs = { path = "crates/epics-pva-rs", version = "0.7.12" }
motor-rs = { path = "crates/motor-rs", version = "0.7.12" }
std-rs = { path = "crates/std-rs", version = "0.7.12" }
scaler-rs = { path = "crates/scaler-rs", version = "0.7.12" }
optics-rs = { path = "crates/optics-rs", version = "0.7.12" }

[patch.crates-io]
spvirit-client = "0.1.6"
spvirit-codec = "0.1.6"
spvirit-server = "0.1.6"
spvirit-types = "0.1.6"
