[workspace]
members = ["crates/*", "examples/*"]
default-members = [
    "crates/ad-core-rs",
    "crates/ad-plugins-rs",
    "crates/asyn-rs",
    "crates/epics-base-rs",
    "crates/epics-ca-rs",
    "crates/epics-macros-rs",
    "crates/epics-pva-rs",
    "crates/epics-bridge-rs",
    "crates/epics-rs",
    "crates/motor-rs",
    "crates/std-rs",
    "crates/scaler-rs",
    "crates/optics-rs",
    "crates/mqtt-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.9.3"
authors = ["Sang Woo Kim <sngwkim915@gmail.com>"]
license = "EPICS"
repository = "https://github.com/epics-rs/epics-rs"

[workspace.dependencies]
ad-core-rs = { path = "crates/ad-core-rs", version = "0.9.3" }
ad-plugins-rs = { path = "crates/ad-plugins-rs", version = "0.9.3" }
asyn-rs = { path = "crates/asyn-rs", version = "0.9.3" }
epics-base-rs = { path = "crates/epics-base-rs", version = "0.9.3" }
epics-ca-rs = { path = "crates/epics-ca-rs", version = "0.9.3" }
epics-macros-rs = { path = "crates/epics-macros-rs", version = "0.9.3" }
epics-pva-rs = { path = "crates/epics-pva-rs", version = "0.9.3" }
epics-bridge-rs = { path = "crates/epics-bridge-rs", version = "0.9.3" }
motor-rs = { path = "crates/motor-rs", version = "0.9.3" }
std-rs = { path = "crates/std-rs", version = "0.9.3" }
scaler-rs = { path = "crates/scaler-rs", version = "0.9.3" }
optics-rs = { path = "crates/optics-rs", version = "0.9.3" }
mqtt-rs = { path = "crates/mqtt-rs", version = "0.9.3" }

[patch.crates-io]
spvirit-server = { git = "https://github.com/ISISNeutronMuon/spvirit.git", rev = "5af368efda9cdea5e4946af5d4157d2cf5645edd" }
spvirit-codec  = { git = "https://github.com/ISISNeutronMuon/spvirit.git", rev = "5af368efda9cdea5e4946af5d4157d2cf5645edd" }
spvirit-types  = { git = "https://github.com/ISISNeutronMuon/spvirit.git", rev = "5af368efda9cdea5e4946af5d4157d2cf5645edd" }
spvirit-client = { git = "https://github.com/ISISNeutronMuon/spvirit.git", rev = "5af368efda9cdea5e4946af5d4157d2cf5645edd" }
spvirit-tools  = { git = "https://github.com/ISISNeutronMuon/spvirit.git", rev = "5af368efda9cdea5e4946af5d4157d2cf5645edd" }

