[package]
name = "ad-plugins-rs"
version.workspace = true
edition.workspace = true
description = "NDPlugin implementations for areaDetector-rs"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ad-core-rs = { workspace = true }
asyn-rs = { workspace = true }
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
parking_lot = "0.12"
rustfft = "6"
lz4_flex = "0.11"
jpeg-encoder = "0.6"
jpeg-decoder = "0.3"
tiff = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
netcdf3 = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff"] }
rayon = { version = "1", optional = true }

[dependencies.hdf5-metno]
version = "0.12"
features = ["static"]
optional = true

[features]
default = ["parallel"]
hdf5 = ["dep:hdf5-metno"]
ioc = ["ad-core-rs/ioc"]
parallel = ["rayon"]
