[package]
name = "ad-plugins-rs"
version.workspace = true
edition.workspace = true
description = "NDPlugin implementations for areaDetector-rs"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
ad-core-rs = { workspace = true }
asyn-rs = { workspace = true }
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
parking_lot = "0.12"
rustfft = "6"
lz4_flex = "0.11"
jpeg-encoder = "0.6"
jpeg-decoder = "0.3"
tiff = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
netcdf3 = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff"] }
rayon = { version = "1", optional = true }
rust-hdf5 = { version = "0.2", features = ["threadsafe", "all_filters"] }

[features]
default = ["parallel"]
ioc = ["ad-core-rs/ioc"]
parallel = ["rayon"]
