[package]
name = "asyn-rs"
version.workspace = true
edition.workspace = true
description = "Rust port of EPICS asyn - async device I/O framework"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
thiserror = "2"
bitflags = "2"
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
epics-base-rs = { workspace = true, optional = true }

[features]
default = []
epics = ["dep:epics-base-rs"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
