[package]
name = "autosave-rs"
version.workspace = true
edition.workspace = true
description = "EPICS autosave ported to Rust — thin wrapper over epics-base-rs"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
epics-base-rs = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tempfile = "3"
