[package]
name = "busy-rs"
version.workspace = true
edition.workspace = true
description = "Rust port of EPICS busy record"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
epics-base-rs = { workspace = true }

[dev-dependencies]
epics-ca-rs = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
