[package]
name = "calc-rs"
version = "0.2.1"
edition = "2021"
description = "EPICS calc expression engine in Rust — thin wrapper over epics-base-rs"

[features]
default = ["numeric"]
numeric = []
string = []
array = ["math"]
math = []
epics = ["string", "array"]

[dependencies]
epics-base-rs = { path = "../epics-base" }
