[package]
name = "epics-base-rs"
version.workspace = true
edition.workspace = true
description = "Pure Rust EPICS IOC core — record system, database, iocsh, calc engine"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
bytes = "1"
hostname = "0.4"
socket2 = { version = "0.5", features = ["all"] }
chrono = "0.4"
epics-macros-rs = { workspace = true }
rustyline = "14"

[dev-dependencies]
epics-ca-rs = { workspace = true }
tempfile = "3"
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "record_bench"
harness = false

