[package]
name = "epics-base-rs"
version.workspace = true
edition.workspace = true
description = "Pure Rust EPICS IOC core — record system, database, iocsh, calc engine"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
bytes = "1"
hostname = "0.4"
socket2 = { version = "0.5", features = ["all"] }
chrono = "0.4"
epics-macros-rs = { workspace = true }
rustyline = "14"

[dev-dependencies]
epics-ca-rs = { workspace = true }
tempfile = "3"
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Empty mirror features so the integration test can cfg-gate the
# extra arguments `epics_ca_rs::server::tcp::run_tcp_listener` exposes
# under the matching `epics-ca-rs/*` features. The features are
# *empty* — they don't activate anything in `epics-ca-rs`, they just
# track the workspace activation state. Under `--all-features` they
# both flip on (alongside the dev-dep features); under default
# features both stay off. We avoided a real dev-dep passthrough
# (e.g. `["epics-ca-rs/experimental-rust-tls"]`) because that breaks
# `cargo publish` — dev-deps are stripped before feature parsing.
[features]
ca-experimental-rust-tls = []
ca-cap-tokens = []

[[bench]]
name = "record_bench"
harness = false

