[package]
name = "epics-base-rs"
version = "0.2.2"
edition = "2021"
description = "Pure Rust EPICS Channel Access client"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
bytes = "1"
hostname = "0.4"
socket2 = { version = "0.5", features = ["all"] }
chrono = "0.4"
epics-macros = { workspace = true }
rustyline = "14"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "caget-rs"
path = "src/bin/caget-rs.rs"

[[bin]]
name = "caput-rs"
path = "src/bin/caput-rs.rs"

[[bin]]
name = "camonitor-rs"
path = "src/bin/camonitor-rs.rs"

[[bin]]
name = "cainfo-rs"
path = "src/bin/cainfo-rs.rs"

[[bin]]
name = "ca-repeater-rs"
path = "src/bin/ca-repeater-rs.rs"

[[bin]]
name = "pvaget-rs"
path = "src/bin/pvaget-rs.rs"

[[bin]]
name = "pvaput-rs"
path = "src/bin/pvaput-rs.rs"

[[bin]]
name = "pvamonitor-rs"
path = "src/bin/pvamonitor-rs.rs"

[[bin]]
name = "pvainfo-rs"
path = "src/bin/pvainfo-rs.rs"

[[bin]]
name = "softioc-rs"
path = "src/bin/softioc-rs.rs"
