[package]
name = "epics-bridge-rs"
version.workspace = true
edition.workspace = true
description = "EPICS protocol bridges: Record↔PVA (QSRV), CA gateway, pvalink, PVA gateway"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[features]
default = ["ca-gateway", "ca-gateway-bin"]
# CA fan-out gateway (C++ ca-gateway equivalent)
ca-gateway = ["dep:epics-ca-rs", "dep:regex"]
# CA gateway daemon binary (ca-gateway-rs)
ca-gateway-bin = ["ca-gateway", "dep:clap"]
# PVA links for record INP/OUT (planned)
pvalink = ["dep:epics-pva-rs"]
# PVA-to-PVA proxy (planned, requires PVA server)
pva-gateway = ["dep:epics-pva-rs", "dep:regex"]
# Convenience: enable all bridges + binaries
all-bridges = ["ca-gateway", "ca-gateway-bin", "pvalink", "pva-gateway"]

[dependencies]
epics-base-rs = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = "0.4"

# Feature-gated optional dependencies
epics-pva-rs = { workspace = true, optional = true }
epics-ca-rs = { workspace = true, optional = true }
regex = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "ca-gateway-rs"
path = "src/bin/ca_gateway_rs.rs"
required-features = ["ca-gateway-bin"]
