[package]
name = "epics-ca-rs"
version.workspace = true
edition.workspace = true
description = "EPICS Channel Access protocol client and server"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
epics-base-rs = { workspace = true }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
if-addrs = "0.13"
tracing = "0.1"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }
x509-parser = { version = "0.16", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
# Bundled Prometheus exporter + tracing-subscriber init helpers.
# Without this feature consumers wire up their own observability
# stack via the bare `metrics` and `tracing` facades.
observability = ["dep:metrics-exporter-prometheus", "dep:tracing-subscriber"]
# CA over TLS: encrypted TCP virtual circuits, optional mTLS for
# authentication. Adds tokio-rustls + rustls-pemfile + x509-parser
# (for SAN/CN extraction) + sha2 (fingerprint fallback).
tls = [
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:rustls-pki-types",
    "dep:x509-parser",
    "dep:sha2",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
proptest = "1"
rcgen = "0.13"

[[bench]]
name = "protocol_bench"
harness = false

[[bin]]
name = "caget-rs"
path = "src/bin/caget-rs.rs"

[[bin]]
name = "caput-rs"
path = "src/bin/caput-rs.rs"

[[bin]]
name = "camonitor-rs"
path = "src/bin/camonitor-rs.rs"

[[bin]]
name = "cainfo-rs"
path = "src/bin/cainfo-rs.rs"

[[bin]]
name = "ca-repeater-rs"
path = "src/bin/ca-repeater-rs.rs"

[[bin]]
name = "softioc-rs"
path = "src/bin/softioc-rs.rs"

[[bin]]
name = "ca-soak"
path = "src/bin/ca-soak.rs"

[[bin]]
name = "ca-soak-observed"
path = "src/bin/ca-soak-observed.rs"
required-features = ["observability"]
