[package]
name = "epics-macros-rs"
version.workspace = true
edition.workspace = true
description = "Procedural macros for epics-base-rs"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
