[package]
name = "epics-macros-rs"
version.workspace = true
edition.workspace = true
description = "Procedural macros for epics-base-rs"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"

[dev-dependencies]
epics-base-rs = { workspace = true }
