[package]
name = "epics-macros-rs"
version.workspace = true
edition.workspace = true
description = "Procedural macros for epics-base-rs"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"

# Dev-only — `path` (no `version`) so `cargo publish` strips this from
# the uploaded manifest. Tests against the live workspace tree work
# locally; the published .crate doesn't carry tests anyway.
[dev-dependencies]
epics-base-rs = { path = "../epics-base-rs" }
