[package]
name = "epics-pva-rs"
version.workspace = true
edition.workspace = true
description = "EPICS pvAccess protocol client (experimental)"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
epics-base-rs = { workspace = true }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
thiserror = "2"
socket2 = "0.5"
hostname = "0.4"

[[bin]]
name = "pvget-rs"
path = "src/bin/pvget-rs.rs"

[[bin]]
name = "pvput-rs"
path = "src/bin/pvput-rs.rs"

[[bin]]
name = "pvmonitor-rs"
path = "src/bin/pvmonitor-rs.rs"

[[bin]]
name = "pvinfo-rs"
path = "src/bin/pvinfo-rs.rs"
