[package]
name = "epics-pva-rs"
version.workspace = true
edition.workspace = true
description = "EPICS pvAccess protocol client (experimental)"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
epics-base-rs = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
thiserror = "2"
socket2 = "0.5"
hostname = "0.4"
tokio-util = { version = "0.7", default-features = false }
# Refcounted byte buffer used by the raw-frame monitor forwarding path
# (F-G12). Lets fan-out broadcast `Bytes` clones (atomic increment)
# without copying multi-MB NTNDArray payloads.
bytes = "1"
parking_lot = "0.12"
if-addrs = "0.13"

# POSIX getgrouplist / getpwuid / getgrgid for posix_groups() — pvxs
# osdGetRoles parity. Stays a regular dep; on non-Unix targets the
# auth::plain::posix_groups() path is cfg-gated to return [].
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# TLS for `pvas://` (opt-in via `EPICS_PVAS_TLS_KEYCHAIN`).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
serial_test = "3"

[[bin]]
name = "pvget-rs"
path = "src/bin/pvget-rs.rs"

[[bin]]
name = "pvput-rs"
path = "src/bin/pvput-rs.rs"

[[bin]]
name = "pvmonitor-rs"
path = "src/bin/pvmonitor-rs.rs"

[[bin]]
name = "pvinfo-rs"
path = "src/bin/pvinfo-rs.rs"
