[package]
name = "epics-seq-rs"
version.workspace = true
edition.workspace = true
description = "Rust-native EPICS sequencer runtime"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
